--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,9 @@ header > img {
     width: 35%;
     align-self: flex-end;
 }
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
