--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,20 @@ body {
     /* justify-content: center; */
     align-items: center;
 }
+#product-title{
+    color: #fff;
+    font-size: 100px;
+    padding: 20px;
+    margin: 20px;
+}
 
 header {
     width: 95%;
     height: 25%;
-    background-color: #CE6E6E;
+    background-color: #6c33fc;
     margin-top: 1.5vh;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
 }
 
 nav {
@@ -27,9 +33,14 @@ nav {
     font-size: 1.3em;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding: 10px;
 
 }
-
+a{
+    text-decoration: none;
+    color: #fff;
+    padding: 10px;
+}
 header > img {
     float: right;
     height: 90%;
