--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
     width: 100vw;
     /* justify-content: center; */
     align-items: center;
+    /* justify-content: space-around; */
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 header {
@@ -16,6 +18,7 @@ header {
     margin-top: 1.5vh;
     display: flex;
     flex-direction: column;
+    margin-bottom: 3vh;
 }
 
 nav {
@@ -39,6 +42,12 @@ header > img {
 
 .container{
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-around;
+    width: 100%;
+}
+
+.right-col {
+    display: flex;
+    flex-direction: column;
 }
