--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ header > img {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 50%;
 }
 
 #section3 {
